[project]
name = "python-tests"
version = "0.1.0"
description = "Tests and prototyping coded in python"
authors = [{ name = "Emiliano Frigo" }]
requires-python = ">=3.10,<4.0.0"
dependencies = ["dropbox>=12.0.2", "ipykernel>=6.6.0", "python-dotenv>=1.1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
