[project]
name = "dropbox-transcript-downloader"
version = "0.1.0"
description = "Download transcripts from Dropbox"
authors = [{ name = "Emiliano Frigo" }]
requires-python = ">=3.10,<4.0.0"
dependencies = ["dropbox>=12.0.2", "python-dotenv>=1.1.0"]

[project.optional-dependencies]
dev = ["black==24.3.0", "isort==5.10.1", "pylint==3.0.3", "pre-commit==3.6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 79
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
